modify Command and Query services. Update base entity and add extension block for Note dtos

--- a/NoteAppBackend/NoteAppBackend.csproj
+++ b/NoteAppBackend/NoteAppBackend.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="dotenv.net" Version="4.0.0" />
-    <PackageReference Include="LanguageExt.Core" Version="5.0.0-beta-54" />
+    <PackageReference Include="LanguageExt.Core" Version="4.4.9" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.0-rc.1.25451.107" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0-rc.1.25451.107" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0-rc.1.25451.107" />
