--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/NoteAppBackend/notesdb
+/NoteAppBackend/notesdb-shm
+/NoteAppBackend/notesdb-wal
