--- a/NoteAppBackend/.env
+++ b/NoteAppBackend/.env
@@ -1,1 +1,2 @@
 ﻿POSTGRES_CONN_STRING="Server=localhost;Database=notesdb;Port=5433;Username=postgres;Password=postgres"
+SQLITE_CONN_STRING="Data Source=notesdb"
