--- a/NoteAppBackend/NoteAppBackend.csproj
+++ b/NoteAppBackend/NoteAppBackend.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
@@ -23,6 +23,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="NSwag.AspNetCore" Version="14.6.1" />
     <PackageReference Include="Ulid" Version="1.4.1" />
     <PackageReference Include="Ulid.SystemTextJson" Version="1.4.1" />
   </ItemGroup>
