--- a/NoteAppBackend/NoteAppBackend.csproj
+++ b/NoteAppBackend/NoteAppBackend.csproj
@@ -23,6 +23,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Npgsql" Version="10.0.0-rc.1" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0-rc.2" />
     <PackageReference Include="NSwag.AspNetCore" Version="14.6.1" />
     <PackageReference Include="Ulid" Version="1.4.1" />
     <PackageReference Include="Ulid.SystemTextJson" Version="1.4.1" />
